Alpha (#36)
* Beta 5 add vagrantfile
* Beta 6 add log (#33)
* Add lombok logs
* Beta 7 add jakson (#34)
* Add jakson
* Add java 20
* Beta 8 move torrent from cli to web api (#35)